@@ -17,8 +17,11 @@ concurrency:
 
 jobs:
   analyze:
+    if: ${{ !github.event.pull_request.draft }}
+
     name: Analyze
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04-16-core-x64
+    container: symless/synergy-core:ubuntu-24.04-amd64
     timeout-minutes: 20
 
     strategy:
@@ -27,29 +30,16 @@ jobs:
         language: ["cpp"]
 
     steps:
-      - name: Install dependencies
-        run: |
-          sudo apt-get update; \
-          sudo apt-get install -y \
-            build-essential \
-            cmake \
-            debhelper \
-            devscripts \
-            git \
-            libavahi-compat-libdnssd-dev \
-            libgdk-pixbuf2.0-dev \
-            libgl1-mesa-dev \
-            libglib2.0-dev \
-            libnotify-dev \
-            libssl-dev \
-            libx11-dev \
-            libxtst-dev \
-            qtbase5-dev \
-            qttools5-dev \
-            qttools5-dev-tools
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          submodules: "recursive"
 
-      - name: Checkout git repo
-        uses: actions/checkout@v3
+      - name: Config Git safe dir
+        run: git config --global --add safe.directory $GITHUB_WORKSPACE
+
+      - name: Install dependencies
+        run: ./scripts/install_deps.py
 
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v3
