@@ -66,7 +66,6 @@ config:
     opensuse-tumbleweed: &opensuse-tumbleweed
       dependencies:
         command: sudo zypper refresh; \
-          sudo zypper --non-interactive remove busybox-which; \
           sudo zypper install -y --force-resolution \
           cmake \
           make \
